# c-base

./: CMakeLists.txt  DOCS.md  README.md  TODO.md  build.py
cmake/: Sanitizers.cmake
examples/foundation/: CMakeLists.txt
examples/foundation/containers/: CMakeLists.txt  example_dynarray.c
examples/foundation/containers/iterators/: CMakeLists.txt  example_iter.c
examples/foundation/memory/: CMakeLists.txt  example_allocator.c  example_arena.c  example_memory.c
include/base/foundation/: macros.h
include/base/foundation/containers/: container.h  dynarray.h  hashmap.h  iterator.h
include/base/foundation/containers/iterators/: dynarray_iter.h
include/base/foundation/containers/iterators/adapters/: map_iter.h
include/base/foundation/core/: test.h
include/base/foundation/memory/: allocator.h  arena.h  memory.h  pool.h  stack.h
src/foundation/containers/: CMakeLists.txt  dynarray.c  hashmap.c
src/foundation/containers/iterators/: CMakeLists.txt  dynarray_iter.c
src/foundation/containers/iterators/adapters/: CMakeLists.txt  map_iter.c
src/foundation/memory/: CMakeLists.txt  allocator.c  arena.c  memory.c  pool.c  stack.c
tests/foundation/: CMakeLists.txt
tests/foundation/containers/: CMakeLists.txt  test_dynarray_edge.c  test_dynarray_pod.c  test_dynarray_policy.c
tests/foundation/memory/: test_allocator.c  test_arena.c  test_memory.c  test_pool.c  test_stack.c
